--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body * {
     display: block;
     margin-left: 0;
@@ -8,6 +9,7 @@ body * {
 fieldset {
     border: none;
     padding: 0;
+    position:relative;
 }
 body,h1,h2 {
     margin: 0;
@@ -120,6 +122,70 @@ fieldset {
 fieldset:first-child {
     border-bottom: 2px solid black;
 }
+
+
+
+
+
+
+.checkmark {
+    display: inline-block;
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    top: 21.%;
+    left:25%;
+    
+  }
+  .checkmark:after {
+    /*Add another block-level blank space*/
+    content: '';
+    display: block;
+    /*Make it a small rectangle so the border will create an L-shape*/
+    width: 2px;
+    height: 5px;
+    /*Add a white border on the bottom and left, creating that 'L' */
+    border: solid rgb(255, 255, 255);
+    border-width: 0 2px 2px 0;
+    /*Rotate the L 45 degrees to turn it into a checkmark*/
+    transform: rotate(45deg);
+  }
+  
+
+
+
+.test {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border:1px solid black;
+    top: 21%;
+    left:0.3%;
+}
+
+.test {
+    
+    font-size: 0.5rem;
+    font-weight: bolder;
+    margin-bottom: 0.4rem;
+     
+}
+input[value="html"]:checked ~ div {
+    
+    
+    background-color: rgb(18, 172, 223);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 @media (min-width:769px) {
     .info-container,
