--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+.test{
+    position:absolute;
+    width:10px;
+    height:10px;
+    top:24.5%;
+    border:1px solid black;
+}
+
 body * {
     display: block;
     margin-left: 0;
@@ -6,6 +14,7 @@ body * {
     box-sizing: border-box;
 }
 fieldset {
+    pointer-events: relative;
     border: none;
     padding: 0;
 }
@@ -74,6 +83,11 @@ label {
 input[type="radio"] + label,
 input[type="checkbox"] + label {
     margin-left: .6rem;
+}
+::placeholder{
+    text-align: right;
+    opacity: .3;
+    padding-right:1rem; 
 }
 footer p {
     margin-top: 0;
