--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,4 @@
-.test{
-    position:absolute;
-    width:10px;
-    height:10px;
-    top:24.5%;
-    border:1px solid black;
-}
-
+/*Alignment*/
 body * {
     display: block;
     margin-left: 0;
@@ -14,7 +7,6 @@ body * {
     box-sizing: border-box;
 }
 fieldset {
-    pointer-events: relative;
     border: none;
     padding: 0;
 }
@@ -35,24 +27,26 @@ footer {
     margin: auto;
     color:rgba(18, 21, 26, 0.809);
 }
-label,p {
-    color:rgba(27, 29, 36, 0.555);
-    font-size: .8rem;
-    letter-spacing: .8px;
-    
-}
 .intro,
 footer,
 .info-container {
     text-align: center;
 }
+
+/*Font setup*/
+label,p {
+    color:rgba(27, 29, 36, 0.555);
+    font-size: .8rem;
+    letter-spacing: .8px;
+}
 h1 {
     font-size: 1.3rem;
 }
-h2 {
+h2,span {
     font-size: 1.2rem;
     font-weight: 700;
 }
+
 
 /*Header*/
 .intro {
@@ -65,6 +59,7 @@ h2 {
     border-bottom: 4px solid black; 
 }
 
+
 /*main*/
 form {
     margin-top: 2px;
@@ -74,7 +69,7 @@ legend {
     padding: 0;
     margin-bottom: .5rem;
 }
-fieldset h2 {
+fieldset span {
     margin-top: 1.4rem;
 }
 label {
@@ -89,11 +84,11 @@ input[type="checkbox"] + label {
     opacity: .3;
     padding-right:1rem; 
 }
-footer p {
-    margin-top: 0;
-    margin-bottom: 10rem;
+select {
+    color:rgba(27, 29, 36, 0.555);
 }
-input[id],
+
+.form-container input,
 button,
 textarea,
 select{
@@ -103,9 +98,32 @@ select{
     background-color: rgba(211, 211, 211, 0.356);
     border-radius: 4px;
     padding-left: 1rem;
+    transition-property:border,transform;
+    transition-duration:0.5s; 
+}
+input:focus,
+select:focus,
+textarea:focus {
+    border:2px solid rgb(15, 63, 196);
+    transform: scale(1.1);
+    box-shadow: inset 0 0 5px 1px rgb(4, 122, 168);
 }
 select {
     height:2.6rem;
+}
+
+input[name="zip_code"] {
+    width:50%;
+}
+textarea {
+    height: 4.7rem;
+    padding-top: 1rem;
+}
+fieldset {
+    padding-bottom:1.2rem;
+}
+fieldset:first-child {
+    border-bottom: 2px solid black;
 }
 button {
     margin-top: 1.4rem;
@@ -115,27 +133,15 @@ button {
     font-weight: 500;
     font-size: 1rem;
 }
-input[name="zip_code"] {
-    width:50%;
-}
-textarea {
-    height: 4.7rem;
-    padding-top: 1rem;
-}
-input:focus,
-select:focus,
-textarea:focus {
-    border:2px solid rgb(17, 17, 163);
+/*footer*/
+footer p {
+    margin-top: 0;
+    font-style: italic;
+    margin-bottom: 8rem;
 }
 
-fieldset {
-    padding-bottom:1.2rem;
-}
-fieldset:first-child {
-    border-bottom: 2px solid black;
-}
 
-@media (min-width:769px) {
+@media (min-width:768px) {
     .info-container,
     main,
     footer {
@@ -151,7 +157,7 @@ fieldset:first-child {
         margin: .7rem 0;
     
     }
-    .form-container> label:not([for="zip"]) {
+    .form-container > label:not([for="zip"]) {
         width:20%;
         margin-right:auto;
         padding-top: .62rem; 
